disable all error bar radion buttons in the beginning, tdf#95057

Change-Id: I611a637038669fe855b4357045bff8d3eb5f8600